@@ -1,6 +1,7 @@
 2.2.1 (????-??-??)
     - fixed memory leak and logging problem in ACL code
     - fixed regression that added invalid addresses during expansion
+    - improved the algorithm that generates email addresses from LDAP group names
 
 2.2.0 (2022-12-12)
     - fixed spurious bounces from transient DNS errors
